--- a/OHCE.test/OHCE.test.csproj
+++ b/OHCE.test/OHCE.test.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OHCE\OHCE.csproj" />
+  </ItemGroup>
+
 </Project>
